# datafusion-orc

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  codecov.yml  deny.toml  file_format.rs  licenserc.toml  mod.rs  object_store_reader.rs  physical_exec.rs  regen.sh  rust-toolchain  taplo.toml  typos.toml
.config/: nextest.toml
.github/workflows/: ci.yml
benches/: arrow_reader.rs
examples/: datafusion_integration.rs
format/: orc_proto.proto
scripts/: README.md  convert_tpch.py  generate-tpch.sh  generate_arrow.py  generate_orc.py  generate_orc_timestamps.py  prepare-test-data.sh  setup-venv.sh  write.py
src/: arrow_reader.rs  arrow_writer.rs  async_arrow_reader.rs  builder.rs  column.rs  compression.rs  error.rs  file_format.rs  file_source.rs  lib.rs  memory.rs  mod.rs  object_store_reader.rs  physical_exec.rs  projection.rs  proto.rs  reader.rs  schema.rs  statistics.rs  stripe.rs
src/array_decoder/: decimal.rs  list.rs  map.rs  mod.rs  string.rs  struct_decoder.rs  timestamp.rs  union.rs
src/arrow_reader/: column.rs  decoder.rs  mod.rs
src/arrow_reader/column/: binary.rs  boolean.rs  date.rs  float.rs  int.rs  list.rs  map.rs  mod.rs  present.rs  string.rs  struct_column.rs  timestamp.rs  tinyint.rs
src/arrow_reader/decoder/: decimal.rs  list.rs  map.rs  mod.rs  string.rs  struct_decoder.rs  timestamp.rs  union.rs
src/datafusion/: file_format.rs  mod.rs  object_store_reader.rs  physical_exec.rs
src/encoding/: boolean.rs  byte.rs  decimal.rs  float.rs  mod.rs  rle.rs  rle_v1.rs  timestamp.rs  util.rs
src/encoding/integer/: mod.rs  rle_v1.rs  util.rs
src/encoding/integer/rle_v2/: delta.rs  direct.rs  mod.rs  patched_base.rs  short_repeat.rs
src/encoding/rle_v2/: delta.rs  direct.rs  mod.rs  patched_base.rs  short_repeat.rs
src/reader/: arrow.rs  column.rs  decode.rs  decompress.rs  metadata.rs  mod.rs  schema.rs
src/reader/column/: boolean.rs  date.rs  float.rs  int.rs  present.rs  string.rs  timestamp.rs
src/reader/decode/: boolean_rle.rs  byte_rle.rs  decimal.rs  float.rs  mod.rs  rle_v1.rs  rle_v2.rs  timestamp.rs  util.rs  variable_length.rs
src/reader/decode/rle_v2/: delta.rs  direct.rs  mod.rs  patched_base.rs  short_repeat.rs
src/writer/: column.rs  mod.rs  stripe.rs
tests/basic/: main.rs  misc.rs
tests/basic/data/: README.md  alltypes.lz4.orc  alltypes.lzo.orc  alltypes.none.orc  alltypes.snappy.orc  alltypes.zlib.orc  alltypes.zstd.orc  generate_orc.py  generate_orc_timestamps.py  long_bool.orc  long_bool_gzip.orc  map_list.snappy.orc  nested_array_float.orc  nested_array_struct.orc  nested_map_struct.orc  overflowing_timestamps.orc  pyarrow_timestamps.orc  string_dict.orc  string_dict_gzip.orc  string_long.orc  string_long_long.orc  string_long_long_gzip.orc  test.orc  write.py
tests/integration/: generate_arrow.py  main.rs
tests/integration/data/: README.md
tests/integration/data/expected_arrow/: TestOrcFile.columnProjection.feather  TestOrcFile.emptyFile.feather  TestOrcFile.metaData.feather  TestOrcFile.test1.feather  TestOrcFile.testDate1900.feather  TestOrcFile.testDate2038.feather  TestOrcFile.testMemoryManagementV11.feather  TestOrcFile.testMemoryManagementV12.feather  TestOrcFile.testPredicatePushdown.feather  TestOrcFile.testSeek.feather  TestOrcFile.testSnappy.feather  TestOrcFile.testStringAndBinaryStatistics.feather  TestOrcFile.testStripeLevelStats.feather  TestOrcFile.testUnionAndTimestamp.feather  TestOrcFile.testWithoutIndex.feather  TestStringDictionary.testRowIndex.feather  TestVectorOrcFile.testLz4.feather  TestVectorOrcFile.testLzo.feather  decimal.feather  nulls-at-end-snappy.feather  orc-file-11-format.feather  orc_index_int_string.feather  orc_split_elim.feather  orc_split_elim_cpp.feather  over1k_bloom.feather
