# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-orc"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/datafusion-contrib/datafusion-orc"
repository = "https://github.com/datafusion-contrib/datafusion-orc"
authors = ["Weny <wenymedia@gmail.com>", "Jeffrey Vo <jeffreyvo@apache.org>"]
license = "Apache-2.0"
description = "Implementation of Apache ORC file format using Apache Arrow in-memory format"
keywords = ["arrow", "orc", "arrow-rs", "datafusion"]
include = ["src/**/*.rs", "Cargo.toml"]
rust-version = "1.73"

[package.metadata.docs.rs]
all-features = true

[dependencies]
arrow = { version = "56.0", features = ["prettyprint", "chrono-tz"] }
async-trait = { version = "0.1.77" }
bytes = "1.4"
datafusion = "50.0"
datafusion-datasource = "50.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3" }
object_store = { version = "0.12" }
orc-rust = { version = "0.6.3", features = ["async"] }
tokio = { version = "1.28", features = [
    "io-util",
    "sync",
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[[example]]
name = "datafusion_integration"
# Some issue when publishing and path isn't specified, so adding here
path = "./examples/datafusion_integration.rs"
